--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,4 +1,4 @@
-@()
+@(userForm: Form[User])(implicit messages: Messages)
 
 <!DOCTYPE html>
 <html>
@@ -7,24 +7,28 @@
         <title>ログイン</title>
     </head>
     <body>
-        <form action="auth" method="POST">
-            <dl>
-                <dt>
-                    <label for="email">E-mail</label>
-                </dt>
-                <dd>
-                    <input type="text" id="email">
-                </dd>
-            </dl>
-            <dl>
-                <dt>
-                    <label for="password">Password</label>
-                </dt>
-                <dd>
-                    <input type="text" id="password">
-                </dd>
-            </dl>
+        @helper.form(action = routes.Application.auth) {
+        <!-- <form action="./auth" method="POST"> -->
+            @helper.inputText(userForm("email"))
+            @helper.inputText(userForm("password"))
+            <!-- <dl> -->
+                <!-- <dt> -->
+                    <!-- <label for="email">E-mail</label> -->
+                <!-- </dt> -->
+                <!-- <dd> -->
+                    <!-- <input type="text" id="email"> -->
+                <!-- </dd> -->
+            <!-- </dl> -->
+            <!-- <dl> -->
+                <!-- <dt> -->
+                    <!-- <label for="password">Password</label> -->
+                <!-- </dt> -->
+                <!-- <dd> -->
+                    <!-- <input type="text" id="password"> -->
+                <!-- </dd> -->
+            <!-- </dl> -->
             <input type="submit" value="ログイン">
-        </form>
+        <!-- </form> -->
+        }
     </body>
 </html>
