--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,4 +1,4 @@
-@(message: String)
+@()
 
 <!DOCTYPE html>
 <html>
@@ -8,8 +8,8 @@
     </head>
     <body>
         <form action="/auth" method="post">
-            <input type="text" id="email">
-            <input type="text" id="password">
+            <input type="text" name="email">
+            <input type="text" name="password">
             <input type="submit" value="ログイン">
         </form>
     </body>
